--- a/public/css/frontend/style.css
+++ b/public/css/frontend/style.css
@@ -1,6 +1,6 @@
 #mainNav {
   padding-top: 1rem;
-  padding-bottom: 1rem;
+/*  padding-bottom: 1rem;*/
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -36,7 +36,7 @@
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+/*    padding-bottom: 1.5rem;*/
     transition: padding-top 0.3s, padding-bottom 0.3s;
   }
   #mainNav .navbar-brand {
