--- a/public/css/frontend/style.css
+++ b/public/css/frontend/style.css
@@ -82,10 +82,6 @@
 }
 
 @media (min-width: 992px) {
-  .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
-  }
   .masthead .masthead-heading {
     font-size: 4rem;
     line-height: 3.5rem;
@@ -208,3 +204,27 @@ button.bg-banca:focus {
 .text-color-footer {
   color: #02a5a5;
 }
+
+.nav-item {
+  border-bottom: 8px solid transparent;
+}
+
+.nav-item:hover {
+  border-bottom: 8px solid white;
+}
+
+.menu {
+  width: 100%;
+  float: left;
+}
+
+.menu ul li {
+  float: right;
+  list-style-type: none;
+  text-align: left;
+}
+
+.menu ul li a {
+  padding: 10px;
+}
+
