--- a/public/css/frontend/styledevanesa.css
+++ b/public/css/frontend/styledevanesa.css
@@ -66,32 +66,26 @@
 }
 
 #msform .action-button {
-    width: 100px;
-    background: skyblue;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 0px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 5px
+  color: #fff;
+  background-color: #1d73b2;
+  border-color: #1d73b2;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  transition: all 0.2s ease-in-out;
 }
 
 #msform .action-button:hover,
 #msform .action-button:focus {
-    box-shadow: 0 0 0 2px white, 0 0 0 3px skyblue
+    box-shadow: 0 0 0 2px white, 0 0 0 3px #1d73b2
 }
 
 #msform .action-button-previous {
-    width: 100px;
-    background: #616161;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 0px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 5px
+  color: #fff;
+  background-color: #1d73b2;
+  border-color: #1d73b2;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  transition: all 0.2s ease-in-out;
 }
 
 #msform .action-button-previous:hover,
